--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=App
+server.port=${PORT:8080}
+spring.datasource.url=jdbc:postgresql://localhost:5432/chatdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
